<resources>

    <string name="facebook_app_id">270711296774249</string>
    <string name="fb_login_protocol_scheme">fb270711296774249</string>


    <string name="app_name">Fly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="contact">Contact</string>
    <string name="group">Group</string>
    <string name="user">User</string>
    <string name="general">General</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Mặc dù chỉ được trao cơ hội vào sân ở giữa hiệp 2 nhưng Bakayoko đã gây ấn tượng mạnh với 1 bàn thắng và 1 đường kiến tạo</string>
    <string name="no_conservation">Maybe you haven\'t login yet</string>
    <string name="back_to_main">Close</string>
    <string name="back">Back</string>
    <string name="find_anything"><i>Find anything</i></string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone</string>
    <string name="short_description">Short description</string>
    <string name="avatar">Avatar</string>
    <string name="cover">Cover</string>
    <string name="general_settings">General settings</string>
    <string name="color">Color</string>
    <string name="sound">Sound</string>
    <string name="notification">Notification</string>
    <string name="feedback">Feedback</string>
    <string name="invite_friend">Invite friend</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
</resources>
