<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esp.fly.fragments.GeneralFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/logout"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/general_settings"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/text_group" />

                    <RelativeLayout
                        android:id="@+id/setting_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/image_color"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_layout" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/image_color"
                            android:text="@string/color"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_setting" />

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0.4dp"
                        android:background="@color/darkerGray" />

                    <RelativeLayout
                        android:id="@+id/setting_sound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/image_sound"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_speaker" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/image_sound"
                            android:text="@string/sound"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_setting" />

                        <Switch
                            android:id="@+id/sound_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:checked="true" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/darkerGray" />

                    <RelativeLayout
                        android:id="@+id/setting_notification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/image_notification"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_notification" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/image_notification"
                            android:text="@string/notification"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_setting" />

                        <Switch
                            android:id="@+id/notification_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:checked="true" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback"
                        android:textColor="@color/colorMain"
                        android:textSize="@dimen/text_group" />

                    <RelativeLayout
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/image_feedback"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_feedback" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/image_feedback"
                            android:text="@string/feedback"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_setting" />

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/darkerGray" />

                    <RelativeLayout
                        android:id="@+id/invite_friend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/image_invite_friend"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_send" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/image_invite_friend"
                            android:text="@string/invite_friend"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_setting" />

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/darkerGray" />

                    <RelativeLayout
                        android:id="@+id/rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ImageView
                            android:id="@+id/image_rate"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_rate" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_toEndOf="@id/image_rate"
                            android:text="@string/rate"
                            android:textColor="@color/textBlack"
                            android:textSize="@dimen/text_setting" />

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_right_arrow" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <RelativeLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/red">

        <ImageView
            android:layout_width="@dimen/icon_login_button"
            android:layout_height="@dimen/icon_login_button"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_logout"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/text_logout_button" />

    </RelativeLayout>
</RelativeLayout>
