<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    tools:context="com.esp.fly.activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMain">

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="start|center_vertical"
                android:layout_marginLeft="10dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="0dp"
                android:scaleType="fitStart"
                android:onClick="onMenuClick"
                android:src="@drawable/ic_menu"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/toolbar_title"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="12dp"
                android:scaleType="fitEnd"
                android:onClick="onSearchClick"
                android:src="@drawable/ic_search" />

        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorMain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="-50dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_round_corner"
                    android:elevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="onInboxClick"
                        android:orientation="vertical"
                        android:background="@color/transparent">

                        <ImageView
                            android:id="@+id/home_icon_message"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_message" />

                        <TextView
                            android:id="@+id/home_text_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/inbox"
                            android:textColor="@color/colorMain"
                            android:textSize="@dimen/text_header" />
                    </LinearLayout>
                </RelativeLayout>



            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_round_corner"
                    android:elevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="10dp"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:onClick="onContactClick"
                        android:orientation="vertical"
                        android:translationZ="10dp">

                        <ImageView
                            android:id="@+id/home_icon_contact"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_contact" />

                        <TextView
                            android:id="@+id/home_text_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/contact"
                            android:textColor="@color/darkerGray"
                            android:textSize="@dimen/text_header" />
                    </LinearLayout>
                </RelativeLayout>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_round_corner"
                    android:gravity="center"
                    android:onClick="onGroupClick"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    android:elevation="10dp">

                    <ImageView
                        android:id="@+id/home_icon_group"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_group" />

                    <TextView
                        android:id="@+id/home_text_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/group"
                        android:textColor="@color/darkerGray"
                        android:textSize="@dimen/text_header" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/home_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tutorial"
        android:layout_width="@dimen/tut_width"
        android:layout_height="@dimen/circle_button_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="44dp"
        android:visibility="invisible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitXY"
            android:background="@drawable/expand_button"/>
        <TextView
            android:id="@+id/text_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="26sp"
            android:gravity="center"
            android:textColor="@color/textWhite"
            android:textSize="@dimen/text_header"
            android:text="Add friend" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/half_circle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/circle_button_size"
        android:layout_alignParentBottom="true"
        android:src="@drawable/half_circle"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginBottom="15dp"
        android:translationX="259dp"
        android:layout_toStartOf="@+id/tutorial"
        android:scaleType="fitXY"
        android:visibility="visible"/>

    <at.markushi.ui.CircleButton
        android:id="@+id/home_circle_button"
        android:layout_width="@dimen/circle_button_size"
        android:layout_height="@dimen/circle_button_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:overScrollMode="never"
        android:src="@drawable/ic_add"
        app:cb_color="@color/colorMain"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:visibility="visible"
        android:onClick="onFabClick"/>

</RelativeLayout>
